Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 4.025 devel

***   Add BOUNDED warning and promote bounded queues to unbounded.

***   Support string compare, icompare, ato* methods, bug1606. [Yutetsu TAKATSUKASA]

****  Update FST trace API for better performance.


* Verilator 4.024 2019-12-08

**    Support associative arrays (excluding [*] and pattern assignments), bug544.

**    Support queues (excluding {} notation and pattern assignments), bug545.

***   Add +verilator+error+limit to see more assertion errors. [Peter Monsson]

***   Support string.toupper and string.tolower.

***   Support $rewind and $ungetc.

***   Support shortreal as real, with a SHORTREAL warning.

****  Add -Wpedantic and -Wno-context for compliance testing.

****  Add error on redefining preprocessor directives. [Piotr Binkowski]

****  Support $value$plusargs float and shorts, bug1592, bug1619. [Garrett Smith]

****  Fix gate lvalue optimization error, bug831. [Jonathon Donaldson, Driss Hafdi]

****  Fix color assertion on empty if, bug1604. [Andrew Holme]

****  Fix for loop missing initializer, bug1605. [Andrew Holme]

****  Fix hang on concat error, bug1608. [Bogdan Vukobratovic]

****  Fix VPI timed callbacks to be one-shot, pull5. [Matthew Ballance]

****  Fix // in filenames, bug1610. [Peter Nelson]

****  Fix $display("%p") to be closer to IEEE.

****  Fix labels on functions with returns, bug1614. [Mitch Hayenga]

****  Fix false unused message on __Vemumtab, msg3180. [Tobias Rosenkranz]

****  Fix assertion on dotted parameter arrayed function, bug1620. [Rich Porter]

****  Fix interface reference tracing, bug1595. [Todd Strader]

****  Fix error on unpacked concatenations, bug1627. [Driss Hafdi]


* Verilator 4.022 2019-11-10

**    Add --protect-lib, bug1490. [Todd Strader]

**    Add cmake support, bug1363. [Patrick Stewart]

***   Examples have been renamed.
